--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "require-dev": {
         "php": ">= 5.5",
         "phpunit/phpunit": "^4.7",
-        "mockery/mockery": "^0.9.4"
+        "mockery/mockery": "^0.9.4",
+        "satooshi/php-coveralls": "^0.6.1"
     },
     "license": "MIT",
     "authors": [
