--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
         "nikic/php-parser": "~1.3",
         "doctrine/annotations": "~1.0",
         "tebru/assert": "^0.2",
-        "symfony/filesystem": "~2.3",
-        "symfony/event-dispatcher": "^2.3",
+        "symfony/filesystem": "~2.3|~3.0",
+        "symfony/event-dispatcher": "^2.3|~3.0",
         "doctrine/collections": "^1.3"
     },
     "require-dev": {
