--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "tebru/dynamo",
     "description": "Generates PHP classes from an interface based on doctrine annotations",
     "require": {
-        "php": ">= 5.4, <7",
+        "php": ">= 5.4",
         "nikic/php-parser": "~1.3",
         "doctrine/annotations": "~1.0",
         "tebru/assert": "^0.2",
