--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Generates PHP classes from an interface based on doctrine annotations",
     "require": {
         "php": ">= 5.4",
-        "nikic/php-parser": "~1.3",
+        "nikic/php-parser": "^2.0",
         "doctrine/annotations": "~1.0",
         "tebru/assert": "^0.2",
         "symfony/filesystem": "~2.3|~3.0",
